# vggt-mps

./: .env.example  .gitignore  .pypirc.template  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  README.md  SECURITY.md  conftest.py  create_test_images.py  download_model.py  implementation_log.md  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_quick.py  test_vggt.py  test_vggt_direct.py  test_vggt_inference.py  test_vggt_mps.py
.github/scripts/: rlm-conflict-resolver.py
.github/workflows/: README.md  publish.yml  qodo-bot-review.yml  recursive-self-improve.yml  self-improve.yml  trigger-recursive-test.yml  weekly-self-improvement.yml
.rlm-trace/: DEPTH-3-SUMMARY.md  FINAL-ITERATION-3-SUMMARY.md  FINAL-SUMMARY-ITERATION-2.md  FINAL-SUMMARY.md  ITERATION-1-COMPLETE.md  ITERATION-2-STATUS.md  ITERATION-2-SUMMARY.md  LOOP_COMPLETE.md  RLM-RUN-19085450795-EXECUTIVE-SUMMARY.md  RLM-RUN-19085818576-EXECUTIVE-SUMMARY.md  RLM-RUN-19085963459-EXECUTIVE-SUMMARY.md  RLM-RUN-19085981375-EXECUTIVE-SUMMARY.md  depth-1-plan-run-19085818576.md  depth-1-plan-run-19085963459.md  depth-1-plan-run-19085980820.md  depth-1-plan-run-19085981375.md  depth-1-plan-run-19086360271.md  depth-1-plan-run-19086447332.md  depth-1-plan.md  depth-2-changes-partition-2.md  depth-2-exception-handling-run-19085818576.md  depth-3-integration-run-19085367692.md  depth-3-integration-run-19085450795.md  depth-3-integration-run-19085818576.md  depth-3-integration-run-19085963459.md  depth-3-integration-run-19085981375.md  depth-3-integration-run-19086360271.md  depth-3-integration.md  execution-summary-iter-1.md  final-convergence-summary.md  iteration-1-implementation.md  iteration-1-response.md  iteration-1-status.md  iteration-2-analysis-final.md  iteration-2-analysis.md  iteration-2-changes.md  iteration-2-completion.md  iteration-2-final-report.md  iteration-2-final-summary.md  iteration-3-complete.md  (+19 more)
claude_outputs/: step1_output.json  step2_output.json  step3_output.json
docs/: IMPLEMENTATION_SUMMARY.md  README.md  RLM-QUICK-START.md  RLM-SYSTEM.md  SPARSE_ATTENTION_RESULTS.md  scaling_vggt_research.md  twitter_response.txt  twitter_response_scaling.txt
examples/: DEPRECATED_README.md  demo_kitchen_2images.py  demo_portable.py  demo_vggt_mps.py  vggt_mps_inference.py
examples/sample_data/: README.md
legacy/: README.md  setup.py
reports/: environment-manager_results.md  executed_notebooks.json  tutorial-scanner-include-in-tools.json  tutorial-scanner.json
scripts/: cleanup.py  download_model.py  fetch_sample_data.py
src/: vggt_mcp.py  vggt_mps_mcp.py  vggt_sparse_attention.py
test_scene/: create_images.py
tests/: __init__.py  test_hub_load.py  test_mps.py  test_real_quick.py  test_sparse.py  test_vggt_mps.py
(+48 files in other folders)
